Refactor App component to manage browser history and navigation; implement state restoration on back/forward actions; enhance user experience by maintaining screen state across navigation.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Aplikasi AI untuk menemukan restoran yang cocok berdasarkan preferensi makanan kamu"
     />
     <meta name="theme-color" content="#FFA654" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="MakanMana" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
