--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <title>MakanMana? - Rekomendasi Restoran AI</title>
+    <title>MakanMana? - Rekomendasi Restoran</title>
   </head>
 
   <body>
